# ws-translator

./: .pre-commit-config.yaml  Dockerfile  README.md  application.py  docker_build_image.sh  docker_manager.ps1  docker_manager.sh  pyproject.toml  requirements.txt  uv_main.py
Docker/application/dev/: app.name.env  app.version.env  docker-compose-dev.yaml
Docker/application/prod/: app.name.env  docker-compose-prod.yaml
Docker/nginx/prod/: nginx.conf
config/: __init__.py  default.py  dev.env  dev.py  local.env  local.py  prod.env  prod.py  staging.py  testing.env  testing.py  validate_config.py
core/: __init__.py  api.py
core/services/: translator_service.py
core/swagger/: swagger_config.py
core/validators/: translate_payload_validators.py
static/swagger-docs/: swagger.json
tests/: __init__.py  test_index.py  test_translate_api.py
tests/http/: tests_api.http
tests/services/: test_translator_service.py
