[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | Docker
  | maintenance-scripts
)/
'''

[tool.isort]
profile = "black"
line_length = 79

[project]
name = "ws-translator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.1",
    "flask-swagger-ui>=5.21.0",
    "flask-wtf>=1.2.2",
    "googletrans>=4.0.2",
    "gunicorn>=23.0.0",
    "pre-commit>=4.2.0",
    "translators>=6.0.1",
]
